--- a/saitae-web/src/main/webapp/pages/srCra.xhtml
+++ b/saitae-web/src/main/webapp/pages/srCra.xhtml
@@ -11,6 +11,18 @@
     <ui:define name="content">
         <h:form id="form">
             <h:panelGrid columns="1">
+                <h:panelGrid columns="2">
+                    <p:outputLabel for="años" value="Seleccione el año de visualización: "/>
+                    <p:selectOneMenu id="años" value="#{adminReservas.añoSelected}" 
+                                     converter="omnifaces.SelectItemsConverter">
+                        <f:selectItem itemLabel="Seleccione" itemValue="#{0}"
+                                      noSelectionOption="true"/>
+                        <f:selectItems value="#{adminReservas.añosDisponibles}" var="ad"
+                                       itemLabel="#{ad}" itemValue="#{ad}"/>
+                        <p:ajax event="itemSelect" listener="#{adminReservas.onBlour}"
+                                update="form"/>
+                    </p:selectOneMenu>
+                </h:panelGrid>
                 <h1 align="center">Administración de solicitudes de reservas de equipo</h1>
                 <p:accordionPanel id="ap">
                     <p:tab title="Solicitudes de Recursos pendientes">
